--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ jobs:
       env: COMPOSER_FLAGS=--prefer-lowest --prefer-stable
     - php: 7.3
     - php: 7.4
+    - php: 8.0
 
 before_script:
   - composer self-update && composer update --no-interaction $COMPOSER_FLAGS
