--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -16,13 +16,13 @@ services:
         alias: Nyholm\Psr7\Factory\HttplugFactory
 
     League\OAuth2\Server\Repositories\AccessTokenRepositoryInterface:
-        class: OAT\Library\Lti1p3Core\Service\Server\Repository\AccessTokenRepository
+        class: OAT\Library\Lti1p3Core\Security\OAuth2\Repository\AccessTokenRepository
         arguments:
             - '@Psr\Cache\CacheItemPoolInterface'
             - '@Psr\Log\LoggerInterface'
 
     League\OAuth2\Server\Repositories\ClientRepositoryInterface:
-        class: OAT\Library\Lti1p3Core\Service\Server\Repository\ClientRepository
+        class: OAT\Library\Lti1p3Core\Security\OAuth2\Repository\ClientRepository
         arguments:
             - '@OAT\Library\Lti1p3Core\Registration\RegistrationRepositoryInterface'
             - '@OAT\Library\Lti1p3Core\Security\Jwks\Fetcher\JwksFetcherInterface'
@@ -31,9 +31,9 @@ services:
             - '@OAT\Library\Lti1p3Core\Security\Jwt\Parser\ParserInterface'
 
     League\OAuth2\Server\Repositories\ScopeRepositoryInterface:
-        class: OAT\Library\Lti1p3Core\Service\Server\Repository\ScopeRepository
+        class: OAT\Library\Lti1p3Core\Security\OAuth2\Repository\ScopeRepository
 
-    OAT\Library\Lti1p3Core\Service\Server\Factory\AuthorizationServerFactory:
+    OAT\Library\Lti1p3Core\Security\OAuth2\Factory\AuthorizationServerFactory:
         arguments:
             - '@League\OAuth2\Server\Repositories\ClientRepositoryInterface'
             - '@League\OAuth2\Server\Repositories\AccessTokenRepositoryInterface'
@@ -120,12 +120,6 @@ services:
     OAT\Library\Lti1p3Core\Security\Jwks\Exporter\JwksExporter:
         arguments: ['@OAT\Library\Lti1p3Core\Security\Key\KeyChainRepositoryInterface']
 
-    OAT\Library\Lti1p3Core\Security\Jwks\Server\JwksServer:
-        arguments:
-            - '@OAT\Library\Lti1p3Core\Security\Jwks\Exporter\JwksExporter'
-            - '@Http\Message\ResponseFactory'
-            - '@Psr\Log\LoggerInterface'
-
     OAT\Library\Lti1p3Core\Security\Jwks\Fetcher\JwksFetcherInterface:
         class: OAT\Library\Lti1p3Core\Security\Jwks\Fetcher\JwksFetcher
         arguments:
@@ -164,12 +158,12 @@ services:
             - '@OAT\Library\Lti1p3Core\Security\Jwt\Validator\ValidatorInterface'
             - '@OAT\Library\Lti1p3Core\Security\Jwt\Parser\ParserInterface'
 
-    OAT\Library\Lti1p3Core\Service\Server\Generator\AccessTokenResponseGenerator:
+    OAT\Library\Lti1p3Core\Security\OAuth2\Generator\AccessTokenResponseGenerator:
         arguments:
             - '@OAT\Library\Lti1p3Core\Security\Key\KeyChainRepositoryInterface'
-            - '@OAT\Library\Lti1p3Core\Service\Server\Factory\AuthorizationServerFactory'
+            - '@OAT\Library\Lti1p3Core\Security\OAuth2\Factory\AuthorizationServerFactory'
 
-    OAT\Library\Lti1p3Core\Service\Server\Validator\AccessTokenRequestValidator:
+    OAT\Library\Lti1p3Core\Security\OAuth2\Validator\RequestAccessTokenValidator:
         arguments:
             - '@OAT\Library\Lti1p3Core\Registration\RegistrationRepositoryInterface'
             - '@Psr\Log\LoggerInterface'
@@ -212,7 +206,7 @@ services:
 
     OAT\Bundle\Lti1p3Bundle\Security\Authentication\Provider\Service\LtiServiceAuthenticationProvider:
         arguments:
-            - '@OAT\Library\Lti1p3Core\Service\Server\Validator\AccessTokenRequestValidator'
+            - '@OAT\Library\Lti1p3Core\Security\OAuth2\Validator\RequestAccessTokenValidator'
 
     OAT\Library\Lti1p3Core\Security\User\UserAuthenticatorInterface: ~
 
@@ -231,8 +225,8 @@ services:
             - '@OAT\Library\Lti1p3Core\Message\Payload\Builder\MessagePayloadBuilderInterface'
         public: true
 
-    OAT\Library\Lti1p3Core\Service\Client\ServiceClientInterface:
-        class: OAT\Library\Lti1p3Core\Service\Client\ServiceClient
+    OAT\Library\Lti1p3Core\Service\Client\LtiServiceClientInterface:
+        class: OAT\Library\Lti1p3Core\Service\Client\LtiServiceClient
         arguments:
             - '@Psr\Cache\CacheItemPoolInterface'
             - '@GuzzleHttp\ClientInterface'
@@ -263,6 +257,6 @@ services:
         arguments:
             - '@Symfony\Bridge\PsrHttpMessage\HttpFoundationFactoryInterface'
             - '@Symfony\Bridge\PsrHttpMessage\HttpMessageFactoryInterface'
-            - '@OAT\Library\Lti1p3Core\Service\Server\Generator\AccessTokenResponseGenerator'
+            - '@OAT\Library\Lti1p3Core\Security\OAuth2\Generator\AccessTokenResponseGenerator'
             - '@Psr\Log\LoggerInterface'
         tags: ['controller.service_arguments']
