--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=7.2.0",
         "ext-json": "*",
-        "oat-sa/lib-lti1p3-core": "dev-feature/service-handlers",
+        "oat-sa/lib-lti1p3-core": "^5.0",
         "symfony/framework-bundle": "^4.4 || ^5.1",
         "symfony/security-bundle": "^4.4 || ^5.1",
         "symfony/security-http": "^4.4.1 || ^5.1",
@@ -17,7 +17,9 @@
     "require-dev": {
         "phpunit/phpunit": "8.5.14",
         "php-coveralls/php-coveralls": "^2.4",
-        "symfony/browser-kit": "^4.4 || ^5.1"
+        "psalm/plugin-phpunit": "^0.15.1",
+        "symfony/browser-kit": "^4.4 || ^5.1",
+        "vimeo/psalm": "^4.6"
     },
     "autoload": {
         "psr-4": {
@@ -27,5 +29,8 @@
         "exclude-from-classmap": [
             "/Tests/"
         ]
+    },
+    "config": {
+        "sort-packages": true
     }
 }
