feat: core 6.x upgrade feat: added new LTI service layer for LTI libraries automation

--- a/Tests/Resources/Kernel/config/routes.yaml
+++ b/Tests/Resources/Kernel/config/routes.yaml
@@ -9,3 +9,8 @@ test_message_tool:
 test_service:
     path: /test/service
     controller: OAT\Bundle\Lti1p3Bundle\Tests\Resources\Action\Platform\Service\TestServiceAction
+
+test_service_with_handler_as_controller_service:
+    path: /test/service-with-handler-as-controller-service
+    controller: app.test_handler_as_controller_service
+
