feat: added possibility to restrict message type on message firewalls

--- a/Tests/Resources/Kernel/config/security.yaml
+++ b/Tests/Resources/Kernel/config/security.yaml
@@ -6,11 +6,11 @@ security:
         message_platform_secured:
             pattern:   ^/test/message/platform
             stateless: true
-            lti1p3_message_platform: true
+            lti1p3_message_platform: { types: ['LtiDeepLinkingResponse'] }
         message_tool_secured:
             pattern:   ^/test/message/tool
             stateless: true
-            lti1p3_message_tool: true
+            lti1p3_message_tool: { types: ['LtiResourceLinkRequest'] }
         service_secured:
             pattern:   ^/test/service
             stateless: true
