--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -191,6 +191,7 @@ services:
             - '@security.token_storage'
             - '@security.authentication.manager'
             - '@Symfony\Bridge\PsrHttpMessage\HttpMessageFactoryInterface'
+            - '@security.firewall.map'
 
     OAT\Bundle\Lti1p3Bundle\Security\Firewall\Message\LtiToolMessageAuthenticationListener:
         arguments:
@@ -198,20 +199,13 @@ services:
             - '@security.authentication.manager'
             - '@Symfony\Bridge\PsrHttpMessage\HttpMessageFactoryInterface'
             - '@OAT\Bundle\Lti1p3Bundle\Security\Exception\LtiToolMessageExceptionHandlerInterface'
+            - '@security.firewall.map'
 
     OAT\Bundle\Lti1p3Bundle\Security\Firewall\Service\LtiServiceAuthenticationListener:
         arguments:
             - '@security.token_storage'
             - '@security.authentication.manager'
             - '@Symfony\Bridge\PsrHttpMessage\HttpMessageFactoryInterface'
-
-    OAT\Bundle\Lti1p3Bundle\Security\Authentication\Provider\Message\LtiPlatformMessageAuthenticationProvider:
-        arguments:
-            - '@OAT\Library\Lti1p3Core\Message\Launch\Validator\Platform\PlatformLaunchValidatorInterface'
-
-    OAT\Bundle\Lti1p3Bundle\Security\Authentication\Provider\Message\LtiToolMessageAuthenticationProvider:
-        arguments:
-            - '@OAT\Library\Lti1p3Core\Message\Launch\Validator\Tool\ToolLaunchValidatorInterface'
 
     OAT\Bundle\Lti1p3Bundle\Security\Authentication\Provider\Service\LtiServiceAuthenticationProvider:
         arguments:
