--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -206,10 +206,7 @@ services:
             - '@security.token_storage'
             - '@security.authentication.manager'
             - '@Symfony\Bridge\PsrHttpMessage\HttpMessageFactoryInterface'
-
-    OAT\Bundle\Lti1p3Bundle\Security\Authentication\Provider\Service\LtiServiceAuthenticationProvider:
-        arguments:
-            - '@OAT\Library\Lti1p3Core\Security\OAuth2\Validator\RequestAccessTokenValidator'
+            - '@security.firewall.map'
 
     OAT\Library\Lti1p3Core\Security\User\UserAuthenticatorInterface: ~
 
