--- a/Tests/Resources/Kernel/config/lti1p3.yaml
+++ b/Tests/Resources/Kernel/config/lti1p3.yaml
@@ -6,12 +6,10 @@ lti1p3:
             key_set_name: "platformSet"
             public_key: "file://%kernel.project_dir%/Tests/Resources/Keys/public.key"
             private_key: "file://%kernel.project_dir%/Tests/Resources/Keys/private.key"
-            private_key_passphrase: ~
         kid2:
             key_set_name: "toolSet"
             public_key: "file://%kernel.project_dir%/Tests/Resources/Keys/public.key"
             private_key: "file://%kernel.project_dir%/Tests/Resources/Keys/private.key"
-            private_key_passphrase: ~
     platforms:
         testPlatform:
             name: "Test platform"
@@ -26,7 +24,7 @@ lti1p3:
             launch_url: "http://tool.com/test/message/tool"
             deep_linking_url: "http://tool.com/deep-launch"
     registrations:
-        testRegistration:
+        nonOrderedRegistration:
             client_id: "client_id"
             platform: "testPlatform"
             tool: "testTool"
@@ -35,5 +33,32 @@ lti1p3:
                 - "deploymentId2"
             platform_key_chain: "kid1"
             tool_key_chain: "kid2"
-            platform_jwks_url: ~
-            tool_jwks_url: ~
+        nonDefaultRegistration:
+            order: 2
+            client_id: "client_id"
+            platform: "testPlatform"
+            tool: "testTool"
+            deployment_ids:
+                - "deploymentId1"
+                - "deploymentId2"
+            platform_key_chain: "kid1"
+            tool_key_chain: "kid2"
+        testRegistration:
+            order: 1
+            client_id: "client_id"
+            platform: "testPlatform"
+            tool: "testTool"
+            deployment_ids:
+                - "deploymentId1"
+                - "deploymentId2"
+            platform_key_chain: "kid1"
+            tool_key_chain: "kid2"
+        otherNonOrderedRegistration:
+            client_id: "client_id"
+            platform: "testPlatform"
+            tool: "testTool"
+            deployment_ids:
+                - "deploymentId1"
+                - "deploymentId2"
+            platform_key_chain: "kid1"
+            tool_key_chain: "kid2"
