--- a/Tests/Resources/Kernel/config/config.yaml
+++ b/Tests/Resources/Kernel/config/config.yaml
@@ -4,7 +4,7 @@ framework:
 
 services:
     logger:
-        class: Psr\Log\Test\TestLogger
+        class: OAT\Bundle\Lti1p3Bundle\Tests\Resources\Logger\TestLogger
 
     # Services
     OAT\Library\Lti1p3Core\Security\User\UserAuthenticatorInterface:
