feat: add psr/log to required libraries

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.2.0",
         "ext-json": "*",
         "oat-sa/lib-lti1p3-core": "^6.0",
+        "psr/log": "^1.0.1 || ^2.0 || ^3.0",
         "symfony/framework-bundle": "^4.4 || ^5.1",
         "symfony/security-bundle": "^4.4 || ^5.1",
         "symfony/security-http": "^4.4.1 || ^5.1",
