--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=7.2.0",
         "ext-json": "*",
-        "psr/log": "^1|^2|^3",
+        "psr/log": "^1 || ^2 || ^3",
         "oat-sa/lib-lti1p3-core": "^6.0",
         "symfony/framework-bundle": "^4.4 || ^5.1",
         "symfony/security-bundle": "^4.4 || ^5.1",
