ci: remove PHP 7.2, add PHP 8

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,16 +9,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.3, 7.4]
-        coverage: ["true"]
+        php: [7.3, 7.4, 8.0, 8.1, 8.2]
         extra-composer-params: [""]
         include:
-        - php: 7.2
+        - php: 8.2
           coverage: "true"
-          extra-composer-params: "--prefer-lowest --prefer-stable"
-        - php: 8.0
-          coverage: "false" # PHPUnit 8.5.14 doesn't support code coverage under PHP 8
-          extra-composer-params: ""
 
     steps:
     - name: Checkout
@@ -46,7 +41,7 @@ jobs:
     - name: Psalm
       run: |
         ./vendor/bin/psalm --shepherd
-    
+
     - name: Coveralls
       if: ${{ matrix.coverage == 'true' }}
       env:
