--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/yaml": "^4.4 || ^5.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "8.5.14",
+        "phpunit/phpunit": "~8|~9",
         "php-coveralls/php-coveralls": "^2.4",
         "psalm/plugin-phpunit": "^0.15.1",
         "psr/log": "^1.1.0",
