--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=8.0.0",
         "ext-json": "*",
         "oat-sa/lib-lti1p3-core": "^6.0",
-        "psr/log": "^1 || ^2 || ^3",
+        "psr/log": "^2 || ^3",
         "symfony/framework-bundle": "^5.4",
         "symfony/psr-http-message-bridge": "^2.0",
         "symfony/security-bundle": "^5.4",
@@ -17,10 +17,10 @@
         "symfony/yaml": "^5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9",
+        "colinodell/psr-testlogger": "^1.2",
         "php-coveralls/php-coveralls": "^2.4",
+        "phpunit/phpunit": "~9",
         "psalm/plugin-phpunit": "^0.15.1",
-        "psr/log": "^1.1.0",
         "symfony/browser-kit": "^5.4",
         "vimeo/psalm": "^4.6"
     },
