--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=8.0.0",
         "ext-json": "*",
         "oat-sa/lib-lti1p3-core": "^7.0",
+        "nyholm/psr7": "^1.8",
         "psr/log": "^1 || ^2 || ^3",
         "symfony/framework-bundle": "^5.4",
         "symfony/psr-http-message-bridge": "^2.0",
