--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=8.0.0",
         "ext-json": "*",
-        "oat-sa/lib-lti1p3-core": "^7.0",
+        "oat-sa/lib-lti1p3-core": "dev-feature/TR-5944/upgrade-dependencies as 7.0.0",
         "nyholm/psr7": "^1.8",
         "psr/log": "^1 || ^2 || ^3",
         "symfony/framework-bundle": "^5.4",
