--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "nyholm/psr7": "^1.8",
         "oat-sa/lib-lti1p3-core": "^7.0",
         "psr/log": "^1 || ^2 || ^3",
+        "symfony/console": "^5.4",
         "symfony/framework-bundle": "^5.4",
         "symfony/psr-http-message-bridge": "^2.0",
         "symfony/security-bundle": "^5.4",
@@ -24,9 +25,9 @@
         "nesbot/carbon": "^2.72",
         "php-coveralls/php-coveralls": "^2.4",
         "phpunit/phpunit": "~9",
-        "psalm/plugin-phpunit": "^0.15.1",
+        "psalm/plugin-phpunit": "^0.18.4",
         "symfony/browser-kit": "^5.4",
-        "vimeo/psalm": "^4.6"
+        "vimeo/psalm": "^5.18"
     },
     "autoload": {
         "psr-4": {
