--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require-dev": {
         "colinodell/psr-testlogger": "^1.2",
         "guzzlehttp/guzzle": "^7.8",
-        "nesbot/carbon": "^2.72",
+        "nesbot/carbon": "^2.72 || ^3.0",
         "php-coveralls/php-coveralls": "^2.4",
         "phpunit/phpunit": "~9",
         "psalm/plugin-phpunit": "^0.15.1",
