--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         "nyholm/psr7": "^1.8",
         "oat-sa/lib-lti1p3-core": "^7.0",
         "psr/log": "^1 || ^2 || ^3",
-        "symfony/framework-bundle": "^5.4",
+        "symfony/framework-bundle": "^5.4 || ^6.0",
         "symfony/psr-http-message-bridge": "^2.0",
         "symfony/security-bundle": "^5.4 || ^6.0",
         "symfony/security-core": "^5.4 || ^6.0",
-        "symfony/security-http": "^5.4 || ^6.0",
+        "symfony/security-http": "^5.4c",
         "symfony/yaml": "^5.4 || ^6.0"
     },
     "require-dev": {
