--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "symfony/psr-http-message-bridge": "^2.1",
         "symfony/security-bundle": "^5.4 || ^6.0",
         "symfony/security-core": "^5.4 || ^6.0",
-        "symfony/security-http": "^5.4c",
+        "symfony/security-http": "^5.4 || ^6.0",
         "symfony/yaml": "^5.4 || ^6.0"
     },
     "require-dev": {
