feat: Upgrade Symfony version

--- a/Tests/Resources/Kernel/config/security.yaml
+++ b/Tests/Resources/Kernel/config/security.yaml
@@ -16,7 +16,7 @@ security:
             stateless: true
             lti1p3_service: { scopes: ['allowed-scope'] }
         main:
-            anonymous: lazy
+            lazy: true
             provider: users_in_memory
 
     access_control:
