--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,15 +13,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ 8.1, 8.2, 8.3 ]
+        php: [ 8.2, 8.3 ]
         extra-composer-params: [ "" ]
         include:
-          - php: 8.3
+          - php: 8.4
             coverage: "true"
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup PHP & Composer
         uses: shivammathur/setup-php@v2
