--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
     "require": {
         "php": ">=8.1.0",
         "ext-json": "*",
-        "league/oauth2-server": "^8.5",
+        "league/oauth2-server": "^8.5 | ^9.2",
         "nyholm/psr7": "^1.8",
-        "oat-sa/lib-lti1p3-core": "^7.0.2",
+        "oat-sa/lib-lti1p3-core": "dev-feat/TR-6514/php-84 as 7.2.1",
         "psr/log": "^1 || ^2 || ^3",
         "symfony/framework-bundle": "^6.4",
-        "symfony/psr-http-message-bridge": "^2.1",
+        "symfony/psr-http-message-bridge": "^2.1 || ^7.2",
         "symfony/security-bundle": "^6.4",
         "symfony/security-core": "^6.4",
         "symfony/security-http": "^6.4",
@@ -24,9 +24,9 @@
         "nesbot/carbon": "^2.72 || ^3.0",
         "php-coveralls/php-coveralls": "^2.4",
         "phpunit/phpunit": "~9",
-        "psalm/plugin-phpunit": "^0.18",
+        "psalm/plugin-phpunit": "^0.19",
         "symfony/browser-kit": "^6.4",
-        "vimeo/psalm": "^5.25"
+        "vimeo/psalm": "^5.25 || ^6.8"
     },
     "autoload": {
         "psr-4": {
