--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "ext-json": "*",
         "league/oauth2-server": "^8.5 | ^9.2",
         "nyholm/psr7": "^1.8",
-        "oat-sa/lib-lti1p3-core": "dev-feat/TR-6514/php-84 as 7.2.1",
+        "oat-sa/lib-lti1p3-core": "7.2.2",
         "psr/log": "^1 || ^2 || ^3",
         "symfony/framework-bundle": "^6.4",
         "symfony/psr-http-message-bridge": "^2.1 || ^7.2",
