--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,18 @@
     "keywords": ["symfony", "LTI1p3"],
     "type": "symfony-bundle",
     "license": "LGPL-2.1",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/armatronic/lib-lti1p3-core"
+        }
+    ],
     "require": {
         "php": ">=8.1.0",
         "ext-json": "*",
         "league/oauth2-server": "^8.5 | ^9.2",
         "nyholm/psr7": "^1.8",
-        "oat-sa/lib-lti1p3-core": "7.2.2",
+        "oat-sa/lib-lti1p3-core": "dev-lcobucci-jwt-5.0-support as 7.2.2",
         "psr/log": "^1 || ^2 || ^3",
         "symfony/framework-bundle": "^6.4",
         "symfony/psr-http-message-bridge": "^2.1 || ^7.2",
