--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,16 @@
     "require": {
         "php": ">=8.1.0",
         "ext-json": "*",
-        "league/oauth2-server": "^8.5 | ^9.2",
+        "league/oauth2-server": "^8.5 | ^9.3",
         "nyholm/psr7": "^1.8",
         "oat-sa/lib-lti1p3-core": "^7.0",
         "psr/log": "^1 || ^2 || ^3",
-        "symfony/framework-bundle": "^6.4 || ^7.3",
-        "symfony/psr-http-message-bridge": "^2.1 || ^7.3",
-        "symfony/security-bundle": "^6.4 || ^7.3",
-        "symfony/security-core": "^6.4 || ^7.3",
-        "symfony/security-http": "^6.4 || ^7.3",
-        "symfony/yaml": "^6.4 || ^7.3"
+        "symfony/framework-bundle": "^6.4 || ^7.4 || ^8.0",
+        "symfony/psr-http-message-bridge": "^2.1 || ^7.4 || ^8.0",
+        "symfony/security-bundle": "^6.4 || ^7.4 || ^8.0",
+        "symfony/security-core": "^6.4 || ^7.4 || ^8.0",
+        "symfony/security-http": "^6.4 || ^7.4 || ^8.0",
+        "symfony/yaml": "^6.4 || ^7.4 || ^8.0"
     },
     "require-dev": {
         "colinodell/psr-testlogger": "^1.2",
@@ -25,7 +25,7 @@
         "php-coveralls/php-coveralls": "^2.4",
         "phpunit/phpunit": "~9",
         "psalm/plugin-phpunit": "^0.19",
-        "symfony/browser-kit": "^6.4 || ^7.3",
+        "symfony/browser-kit": "^6.4 || ^7.4 || ^8.0",
         "vimeo/psalm": "^5.25 || ^6.8"
     },
     "autoload": {
